# MyMiniPGW

./: CMakeLists.txt  readme.md
src/: pgw_client_config.json  pgw_server_config.json
src/Client/: CMakeLists.txt  pgw_client.cpp
src/Configs/: pgw_client_config.h  pgw_server_config.h
src/Server/: CMakeLists.txt  server.cpp
src/Utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  test_integration.cpp  test_utils.cpp
